--- a/simple-chat-jsf/chat-web/src/main/resources/hu/neuron/i18n/content_en.properties
+++ b/simple-chat-jsf/chat-web/src/main/resources/hu/neuron/i18n/content_en.properties
@@ -4,9 +4,25 @@ signin=Sign in
 signup=Sign up
 logout=Log out
 users=Users
-username=User name
+username=Username
+email=E-mail address
 password=Password
 login=Log in
 remember=Remember me
 chat=Chat
-msg=messages
+messages=Messages
+title.index=Index
+title.messages=Messages
+title.login=Login
+title.registration=Sign up
+firstName=First name
+lastName=Last name
+uploadPhoto=Upload a photo
+signup-error=Unknown user name or bad password!
+please-login=Please login
+send=Send
+byUserName=By username
+byFullName=By fullname
+noRecordsFound=No records found.
+welcome=Welcome
+image=Image
