--- a/simple-chat-jsf/chat-web/src/main/resources/hu/neuron/i18n/content_en.properties
+++ b/simple-chat-jsf/chat-web/src/main/resources/hu/neuron/i18n/content_en.properties
@@ -26,3 +26,8 @@ byFullName=By fullname
 noRecordsFound=No records found.
 welcome=Welcome
 image=Image
+title.chatRooms=Chat rooms
+name=Name
+addChatRoom=Add chatroom
+join=Join
+save=Save
