--- a/simple-chat-jsf/chat-web/src/main/resources/hu/neuron/i18n/content_hu_HU.properties
+++ b/simple-chat-jsf/chat-web/src/main/resources/hu/neuron/i18n/content_hu_HU.properties
@@ -26,3 +26,8 @@ byFullName=Teljes név szerint
 noRecordsFound=Nincs találat.
 welcome=Üdv
 image=Kép
+title.chatRooms=Chat szobák
+addChatRoom=Chat szoba hozzáadása
+name=Név
+join=Belép
+save=Mentés
